<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usersLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/child_selector"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/usersScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/enterUsersButton"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/scroll_botton_margin"
        android:layout_marginLeft="@dimen/base_layout_margin"
        android:layout_marginRight="@dimen/base_layout_margin"
        android:fadeScrollbars="false" >

        <LinearLayout
            android:id="@+id/allUsersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/allLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_layout_margin"
                android:layout_marginLeft="@dimen/base_layout_margin"
                android:layout_marginRight="@dimen/base_layout_margin"
                android:layout_marginTop="@dimen/base_layout_margin"
                android:text="@string/settings_title"
                android:textColor="@color/base_text" />

            <LinearLayout
                android:id="@+id/Target1Data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sTarget1NumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:text="@string/settings_target1username"
                    android:textColor="@color/base_text" />

                <EditText
                    android:id="@+id/sTarget1NumberInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:background="@drawable/rounded_edittext"
                    android:digits="@string/symbol_list"
                    android:ems="7"
                    android:maxLength="100"
                    android:paddingLeft="@dimen/base_layout_margin"
                    android:paddingRight="@dimen/base_layout_margin"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textColor="@color/base_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target1PassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sTarget1PassText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:text="@string/settings_target1pass"
                    android:textColor="@color/base_text" />

                <EditText
                    android:id="@+id/sTarget1PassInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:background="@drawable/rounded_edittext"
                    android:digits="@string/symbol_list"
                    android:inputType="number"
                    android:ems="7"
                    android:maxLength="100"
                    android:paddingLeft="@dimen/base_layout_margin"
                    android:paddingRight="@dimen/base_layout_margin"
                    android:singleLine="true"
                    android:textColor="@color/base_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target2Data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sTarget2NumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:text="@string/settings_target2username"
                    android:textColor="@color/base_text" />

                <EditText
                    android:id="@+id/sTarget2NumberInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:background="@drawable/rounded_edittext"
                    android:digits="@string/symbol_list"
                    android:ems="7"
                    android:inputType="number"
                    android:maxLength="100"
                    android:paddingLeft="@dimen/base_layout_margin"
                    android:paddingRight="@dimen/base_layout_margin"
                    android:singleLine="true"
                    android:textColor="@color/base_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target2PassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sTarget2PassText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:text="@string/settings_target2pass"
                    android:textColor="@color/base_text" />

                <EditText
                    android:id="@+id/sTarget2PassInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/base_layout_margin"
                    android:layout_marginLeft="@dimen/base_layout_margin"
                    android:layout_marginRight="@dimen/base_layout_margin"
                    android:layout_marginTop="@dimen/base_layout_margin"
                    android:inputType="number"
                    android:background="@drawable/rounded_edittext"
                    android:digits="@string/symbol_list"
                    android:ems="7"
                    android:maxLength="100"
                    android:paddingLeft="@dimen/base_layout_margin"
                    android:paddingRight="@dimen/base_layout_margin"
                    android:singleLine="true"
                    android:textColor="@color/base_text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/emptytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="   " />

    <Button
        android:id="@+id/enterUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/emptytext"
        android:text="@string/settings_enter" />

    <Button
        android:id="@+id/cancelUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/emptytext"
        android:text="@string/settings_cancel" />

</RelativeLayout>